--- a/00_orientation/helloWorld.ipynb
+++ b/00_orientation/helloWorld.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f200db60",
+   "metadata": {},
+   "source": [
+    "# レッスン　０\n",
+    "- VS Codeの基本的な書き方"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1b6a98bf",
