--- a/03_collections/todo.ipynb
+++ b/03_collections/todo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "372fdb3f",
    "metadata": {},
    "outputs": [
@@ -11,11 +11,34 @@
      "output_type": "stream",
      "text": [
       "【TODOリスト】\n",
-      "番号を入力してください[1:追加、2:表示、4:保存と終了]:2:表示\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:3:削除\n",
       "1. aaa\n",
-      "2. bbb\n",
-      "3. ccc\n",
-      "番号を入力してください[1:追加、2:表示、4:保存と終了]:4:保存と終了\n",
+      "2. ccc\n",
+      "無効な番号です。\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:1-4の数字を入力してください。\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:1:追加\n",
+      "追加するTODO: ddd\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:2:表示\n",
+      "1. aaa\n",
+      "2. ccc\n",
+      "3. ddd\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:1:追加\n",
+      "追加するTODO: eee\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:2:表示\n",
+      "1. aaa\n",
+      "2. ccc\n",
+      "3. ddd\n",
+      "4. eee\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:3:削除\n",
+      "1. aaa\n",
+      "2. ccc\n",
+      "3. ddd\n",
+      "4. eee\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:2:表示\n",
+      "1. aaa\n",
+      "2. ccc\n",
+      "3. eee\n",
+      "番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:4:保存と終了\n",
       "TODOリストを保存して終了します。\n"
      ]
     }
@@ -35,7 +58,7 @@
     "print(\"【TODOリスト】\")\n",
     "\n",
     "while True:\n",
-    "    print(\"番号を入力してください[1:追加、2:表示、4:保存と終了]:\", end=\"\", flush=True)\n",
+    "    print(\"番号を入力してください[1:追加、2:表示、3:削除、4:保存と終了]:\", end=\"\", flush=True)\n",
     "    choice = input(\"\")\n",
     "\n",
     "    if choice == \"1\":\n",
@@ -47,6 +70,16 @@
     "        print(\"2:表示\", flush=True)\n",
     "        for i, todo in enumerate(todo_list, start=1):\n",
     "            print(f\"{i}. {todo}\")\n",
+    "    elif choice == \"3\":\n",
+    "        print(\"3:削除\", flush=True)\n",
+    "        for i, todo in enumerate(todo_list, start=1):\n",
+    "            print(f\"{i}. {todo}\")\n",
+    "        del_todo = input(\"削除する番号: \")\n",
+    "        if del_todo.isdigit() and 1 <= int(del_todo) <= len(todo_list):\n",
+    "            del_todo = int(del_todo) - 1\n",
+    "            todo_list.pop(del_todo)\n",
+    "        else:\n",
+    "            print(\"無効な番号です。\", flush=True)\n",
     "    elif choice == \"4\":\n",
     "        print(\"4:保存と終了\", flush=True)\n",
     "        with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
