レッスン１０学習保存忘れ

--- a/10_llmbasic/chatbot.ipynb
+++ b/10_llmbasic/chatbot.ipynb
@@ -25,10 +25,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a4c1eec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'質問: こんにちは'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "こんにちは！今日はどんなことをお話ししましょうか？"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'質問: 初心者におすすめのプログラミング言語を３つ教えて'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "初心者におすすめのプログラミング言語は以下の3つです。\n",
+      "\n",
+      "1. **Python（パイソン）**:\n",
+      "   - シンプルな文法と豊富なライブラリが特徴で、データサイエンス、ウェブ開発、機械学習など多くの分野で利用されています。学習コストが低く、初心者でも理解しやすい言語です。\n",
+      "\n",
+      "2. **JavaScript（ジャバスクリプト）**:\n",
+      "   - ウェブ開発において非常に重要な言語で、ブラウザで動作します。インタラクティブなウェブサイトやアプリケーションを作成するのに最適です。基本的な文法が理解できれば、すぐに実践的なアプリケーションを作ることができます。\n",
+      "\n",
+      "3. **Scratch（スクラッチ）**:\n",
+      "   - プログラミングの概念を視覚的に学ぶことができるビジュアルプログラミング言語です。特に子どもや初心者に適しており、ドラッグ＆ドロップでブロックを組み合わせてプログラムを作成できます。ゲームやアニメーションなどを作成する楽しさを通じて、プログラミングの基礎を学ぶことができます。\n",
+      "\n",
+      "これらの言語は初心者が学ぶのに適しており、実際のプロジェクトに応用しやすいため、興味を持ちながら学習を進めることができます。"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'質問: １つめのプログラミング言語の名前は'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最初のプログラミング言語とされているのは「アセンブリ言語」ですが、一般的には「FORTRAN（フォートラン）」が初期の高級プログラミング言語として広く知られています。FORTRANは1957年に発表され、科学技術計算の分野で広く利用されるようになりました。その他にも、1920年代には「テューリングマシン」に基づいた理論的な言語が考案されていましたが、実用的なプログラミング言語としてはFORTRANが初期の代表例とされています。\n",
+      "---ご利用ありがとうございました！---\n"
+     ]
+    }
+   ],
    "source": [
     "# メッセージを格納するリスト\n",
     "\n",
